# calc_gui

./: CMakeLists.txt  Program.cs  README.md  win_forms_calc.Designer.cs  win_forms_calc.cs  win_forms_calc.resx  win_forms_calc.sln
Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
win_forms_calc/: Form1.Designer.cs  Form1.cs  Form1.resx  win_forms_calc.csproj
win_forms_calc/Properties/: Resources.Designer.cs
